--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ header .btn:hover {
 }
 
 .intro-btn-cont{
-    gap: 14px;
+    gap: 10px;
 }
 
 .nav-menu {
@@ -270,7 +270,7 @@ main{
 
 #figma{
     padding: 35px 50px;
-    background-image: url('/img/carru1.svg');
+    background-image: url('/img/carru1.png');
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 24px;
