--- a/styles.css
+++ b/styles.css
@@ -270,7 +270,7 @@ main{
 
 #figma{
     padding: 35px 50px;
-    background-image: url('/img/carru1.png');
+    background-image: url('img/carru1.png');
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 24px;
